--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
+           <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.css">
         {% block stylesheets %}
             {#{{ encore_entry_link_tags('app') }}#}
         {% endblock %}
@@ -14,6 +15,26 @@
         {% endblock %}
     </head>
     <body>
+
+
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+          <a class="navbar-brand" href="/">MifaWeb</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Connexion</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/">Inscription</a>
+              </li>
+            </ul>
+          </div>
+      </nav>
+      <div class="container">
         {% block body %}{% endblock %}
+      </div>
     </body>
 </html>
